--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#6480863b",
-    "titleBar.activeBackground": "#648086",
-    "titleBar.activeForeground": "#FBFAFB"
+    "activityBar.background": "#fafaffd3",
+    "titleBar.activeBackground": "#fafaffd3",
+    "titleBar.activeForeground": "#201320"
   }
 }
