--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "volunteer-network-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start" : "node index.js",
-    "start:dev" : "nodemon index.js",
+    "start": "node src/index.js",
+    "start:dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
